Refactor Jira integration to enhance configuration handling