@@ -2,11 +2,9 @@ package io.hoggmania.dashboard.service;
 
 import java.io.IOException;
 import java.net.URI;
-import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.io.FileInputStream;
 import java.security.KeyStore;
@@ -17,14 +15,23 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import io.hoggmania.dashboard.exception.ValidationException;
+import io.hoggmania.dashboard.util.UrlUtils;
+import io.hoggmania.dashboard.util.StringUtils;
+import io.hoggmania.dashboard.util.RateLimiter;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 
+/**
+ * HTTP client for interacting with Jira REST API.
+ * Supports custom trust stores for enterprise Jira instances
+ * and includes rate limiting to prevent API throttling.
+ */
 @ApplicationScoped
 public class JiraClient {
 
     private final HttpClient httpClient;
+    private final RateLimiter rateLimiter;
 
     @Inject
     ObjectMapper mapper;
@@ -32,8 +39,11 @@ public class JiraClient {
     @Inject
     public JiraClient(
             @ConfigProperty(name = "jira.trust-store") java.util.Optional<String> trustStorePath,
-            @ConfigProperty(name = "jira.trust-store-password") java.util.Optional<String> trustStorePassword) {
+            @ConfigProperty(name = "jira.trust-store-password") java.util.Optional<String> trustStorePassword,
+            @ConfigProperty(name = "jira.rate-limit.max-requests", defaultValue = "100") int maxRequests,
+            @ConfigProperty(name = "jira.rate-limit.window-seconds", defaultValue = "60") int windowSeconds) {
         this.httpClient = createClient(trustStorePath, trustStorePassword);
+        this.rateLimiter = new RateLimiter(maxRequests, Duration.ofSeconds(windowSeconds));
     }
 
     private HttpClient createClient(java.util.Optional<String> trustStorePath, java.util.Optional<String> trustStorePassword) {
@@ -58,20 +68,36 @@ public class JiraClient {
         }
     }
 
+    /**
+     * Fetches a Jira issue by key with all linked issues and changelog.
+     * Includes rate limiting per Jira instance to prevent overwhelming the API.
+     * 
+     * @param baseUrl the Jira instance base URL (e.g., https://jira.example.com)
+     * @param issueKey the issue key (e.g., PROJ-123)
+     * @param personalAccessToken the personal access token for authentication
+     * @return the issue data as a JsonNode
+     * @throws ValidationException if parameters are invalid, rate limit is exceeded, or the API call fails
+     */
     public JsonNode fetchIssue(String baseUrl, String issueKey, String personalAccessToken) {
-        if (baseUrl == null || baseUrl.isBlank()) {
+        if (StringUtils.isBlank(baseUrl)) {
             throw new ValidationException("Jira base URL is required.");
         }
-        if (issueKey == null || issueKey.isBlank()) {
+        if (StringUtils.isBlank(issueKey)) {
             throw new ValidationException("Jira issue key is required.");
         }
-        if (personalAccessToken == null || personalAccessToken.isBlank()) {
+        if (StringUtils.isBlank(personalAccessToken)) {
             throw new ValidationException("A Jira personal access token is required.");
         }
 
+        // Rate limiting per base URL to prevent overwhelming the Jira instance
+        if (!rateLimiter.tryAcquire(baseUrl)) {
+            throw new ValidationException("Rate limit exceeded for Jira instance: " + baseUrl + 
+                ". Please try again later.");
+        }
+
         try {
-            String normalizedBase = normalizeBaseUrl(baseUrl);
-            String encodedKey = URLEncoder.encode(issueKey, StandardCharsets.UTF_8);
+            String normalizedBase = UrlUtils.normalizeBaseUrl(baseUrl);
+            String encodedKey = UrlUtils.encode(issueKey);
             URI uri = URI.create(normalizedBase + "/rest/api/3/issue/" + encodedKey + "?expand=renderedFields,changelog");
             HttpRequest request = HttpRequest.newBuilder(uri)
                     .timeout(Duration.ofSeconds(20))
@@ -84,26 +110,13 @@ public class JiraClient {
                 throw new ValidationException("Failed to fetch Jira issue " + issueKey + ": HTTP " + response.statusCode());
             }
             return mapper.readTree(response.body());
-        } catch (IOException | InterruptedException e) {
-            Thread.currentThread().interrupt();
+        } catch (ValidationException e) {
+            throw e;
+        } catch (IOException e) {
             throw new ValidationException("Unable to call Jira API: " + e.getMessage());
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new ValidationException("Jira API call was interrupted: " + e.getMessage());
         }
-    }
-
-    private String normalizeBaseUrl(String baseUrl) {
-        String trimmed = baseUrl.trim();
-        URI uri = URI.create(trimmed);
-        String scheme = uri.getScheme();
-        if (scheme == null || scheme.isBlank()) {
-            throw new ValidationException("Jira location must include an https:// scheme.");
-        }
-        if (!scheme.equalsIgnoreCase("https")) {
-            throw new ValidationException("Jira location must use HTTPS.");
-        }
-        if (!uri.isAbsolute()) {
-            throw new ValidationException("Jira location must be an absolute URL.");
-        }
-        String normalized = trimmed.endsWith("/") ? trimmed.substring(0, trimmed.length() - 1) : trimmed;
-        return normalized;
     }
 }
